Spacing fixes

--- a/Portfolio/css/index.css
+++ b/Portfolio/css/index.css
@@ -75,6 +75,18 @@ h2 {
     text-transform: uppercase;
 }
 
+.main {
+    padding: 50px 0;
+}
+
+#main {
+    padding-top: 50px;
+}
+
+.index_text {
+    padding: 10px 0;
+}
+
 #about {
     border-radius: 50%;
     margin-left: auto;
@@ -87,6 +99,14 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     padding: 20px 0;
+}
+
+.about_text {
+    padding: 10px 0;
+}
+
+#about_text {
+    padding-top: 50px;
 }
 
 .school {
@@ -104,6 +124,7 @@ h2 {
     margin-right: auto;
     margin-left: auto;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .contact_text {
@@ -113,9 +134,25 @@ h2 {
 }
 
 .experience {
-    padding-top: 50px;
+    padding: 50px 0;
     margin-left: auto;
     margin-right: auto;
+}
+
+#experience {
+    padding-top: 50px;
+}
+
+#experience1 {
+    padding-top: 50px;
+}
+
+#experience2 {
+    padding-top: 50px;
+}
+
+.experience_text {
+    padding: 10px 0;
 }
 
 @media (max-width: 768px) {
